fix spacing for homepage

--- a/index.css
+++ b/index.css
@@ -59,19 +59,23 @@ ul {
   .about-text {
     font-size: 50px;
     font-family: 'Raleway';
-    padding-left: 500px;
-    padding-top: 50px;
+    /*padding-left: 500px;
+    padding-top: 50px;*/
+    position: fixed;
+    left: 20%;
+    top: 15%;
     font-weight: lighter;
   }
 
-  p {
-      
+  p { 
     /*float: left;*/
-
-    width: auto;
-    padding-left: 400px;
+    position: fixed;
+    top: 30%;
+    left: 20%;
+    width: 30%;
+    /*padding-left: 400px;
     padding-right: 1000px;
-    padding-top: 10px;
+    padding-top: 10px;*/
     font-size: 14px;
     letter-spacing: 2px;
     /*font-stretch: expanded;*/
@@ -82,10 +86,10 @@ ul {
 
   img {
     float: right;
-    padding-right: 400px;
-    padding-bottom: 50px;/**/
+    position: fixed;
+    right: 20%;
+    top: 30%;
+    /*padding-right: 400px;
+    padding-bottom: 50px;*/
     z-index: 2;
   }
-  
-  
- 
